# oarepo-file-pipeline-server

./: .copyright.tmpl  .licenseheaders.tmpl  Dockerfile  LICENCE  README.md  pyproject.toml  run-tests.sh  setup.cfg  setup.py  uwsgi-script.py  uwsgi.ini
.github/workflows/: build.yaml
oarepo_file_pipeline_server/: __init__.py  cli.py  config.py  fast_api_server.py  key_manager_service.py  key_provider.py  main.py  proxies.py  utils.py
oarepo_file_pipeline_server/async_to_sync/: __init__.py  stream.py  sync_runner.py
oarepo_file_pipeline_server/pipeline_data/: __init__.py  async_writer.py  base.py  bytes_pipeline_data.py  pipeline_data.py  queue_pipeline_data.py  url_pipeline_data.py
oarepo_file_pipeline_server/pipeline_steps/: __init__.py  add_recipient_crypt4gh.py  base.py  create_zip.py  crypt4gh.py  decrypt_crypt4gh.py  extract_directory_zip.py  extract_file_zip.py  extract_zip.py  preview_picture.py  preview_zip.py  validate_crypt4gh.py
tests/: config_test.json  conftest.py  myanotherkey.pub  myanotherkey.sec  mykey.pub  mykey.sec  secret.txt  secret.txt.c4gh  test_create_zip.py  test_crypt4gh.py  test_extract_directory_zip.py  test_extract_file_zip.py  test_pipeline.py  test_pipeline_data.py  test_pipeline_steps_combinations.py  test_preview_picture.py  test_preview_zip.py
tests/files_for_tests/: another_researcher.pub  another_researcher.sec  hello.txt.c4gh  receiver.key  receiver.pub  researcher.pub  researcher.sec  sender.key  sender.pub  server.pub  server.sec
tests/test_directory_zip/directory1/: directory1-file2.txt
(+3 files in other folders)
