[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oarepo_file_pipeline_server"
version = "0.1.0"
description = "A library for server handling pipeline steps"
requires-python = ">=3.13,<3.14"

dependencies = [
    "oarepo[rdm,tests]>=14,<15",
    "fastapi",
    "redis",
    "boto3",
    "joserfc",
    "oarepo-c4gh",
]

[project.urls]
Homepage = "https://github.com/oarepo/oarepo-file-pipeline-server"


[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["oarepo_file_pipeline_server*"]
exclude = ["tests*"]

[project.optional-dependencies]
tests = [
    "pytest",
    "crypt4gh",
    "minio"
]
oarepo14 = [
    "oarepo>=14.0.0,<15.0.0"
]