[metadata]
name = oarepo_file_pipeline_server
version = 0.1.0
description = A library for server handling pipeline steps (preview zip, extract file etc.) asynchronously
author =
python_requires = >=3.12,<3.13

[options]
install_requires =
    aiohttp
    stream-zip
    pillow
    fastapi
    redis
    boto3
    joserfc
    uvicorn
include_package_data = false
packages = find:

[options.packages.find]
include =
    oarepo_file_pipeline_server*
exclude =
    tests*

[options.extras_require]
tests =
    pytest
    pytest-asyncio

